--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@ width="90%" height="60%" frameborder="0" style="border:1px solid orange;margin-l
 <a href="https://twitter.com/Abhishe6621873" target="_blank" ><i class="fab fa-twitter  circle-icon" style="background-color:#59acff;"></i></a>&nbsp;
 </div><br>
 </div><br>
-<div class="col-md-3 text-center" style="padding-top:3%;"><img src="pic/avtar.png" height=270px;width=25%;> </div>
+<div class="col-md-3 text-center" style="padding-top:3%;"><img src="pic/avtar.jpg" height=270px;width=25%;> </div>
 </div>
 <!------------------------------------------footer----------------------------------------------------------------------->
 <hr color=#989898>
