--- a/project.html
+++ b/project.html
@@ -44,7 +44,7 @@
 <br>
 <h1 class="tab-title">Basic Projects</h1>
 <br>
-<div class="row tab">
+<div class="row tab1">
 <div class="col-sm-4 ">
     <div class="card">
 	<img src="../pic/student1.jpg" class="card-img-top" alt="..." height="200px" width="300px">
