--- a/resume.html
+++ b/resume.html
@@ -7,14 +7,16 @@
 	<link rel="stylesheet" type="text/css" href="css/resume.css">
 <script type="text/javascript">
    function printDiv(divId) {
-       var printContents = document.getElementById(divId).innerHTML;
-       var originalContents = document.body.innerHTML;
-       document.getElementById("HASH").setAttribute("style","opacity:0;height:0%;");
-       document.body.innerHTML = printContents;
-       window.print();
-       document.body.innerHTML = originalContents;
+      window.print();	
    }
 </script>
+	  <style>
+@media print {
+#hash{
+opacity:0;
+}
+}
+</style>
 
   </head>
   <body>
