--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,16 @@
       window.print();	
    }
 </script>
-
+<style>
+@media print {
+#hash{
+display:none;
+}
+section {
+ box-shadow:none;
+}
+}	
+</style>
 
   </head>
   <body>
