--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </div><br>
 <a href="resume.html" target="_blank" ><H6 class="box1 inline b1">Download CV</H6></a>&nbsp;&nbsp;
 <a href="contact.html"><H6 class="box1 inline b2">Contact</h6></a>
-</div>
+</div><br>
 </div>
 
 <!-----------------------------------------What I Do ?------------------------------------------------------------->
