--- a/project.html
+++ b/project.html
@@ -37,7 +37,7 @@
 </nav>
 
 <!----------------------------------------------------------------------------------------------------------------->
-<div class="col-md-12 row" data-aos="fade-left">
+<div class="col-md-12 row" data-aos="fade-left" data-aos-easing="ease-in-back" data-aos-delay="200">
 <div class="col-md-6 text-center">
 <h1 style="font-family:'Comic Sans', cursive;font-size:5rem;padding-top:15%">Projects</h1>
 </div>
