--- a/project.html
+++ b/project.html
@@ -47,10 +47,10 @@
 </div><hr color=#989898>
 <!----------------------------------------------------------------------------------------------------------------->
 <br>
-<h1 class="tab-title" data-aos="flip-left">Basic Projects</h1>
+<h1 class="tab-title" data-aos="flip-left"  data-aos-easing="ease-in-back" data-aos-delay="300">Basic Projects</h1>
 <br>
 <div class="row tab1">
-<div class="col-sm-4 " data-aos="fade-up" >
+<div class="col-sm-4 " data-aos="fade-up"  data-aos-easing="ease-in-back" data-aos-delay="300">
     <div class="card">
 	<img src="../pic/student1.jpg" class="card-img-top" alt="..." height="200px" width="300px">
       <div class="card-body">
@@ -60,7 +60,7 @@
       </div>
     </div><br>
   </div>
-  <div class="col-sm-4 " data-aos="fade-up">
+  <div class="col-sm-4 " data-aos="fade-up"  data-aos-easing="ease-in-back" data-aos-delay="300">
     <div class="card">
 	<img src="../pic/student1.jpg" class="card-img-top" alt="..." height="200px" width="300px">
       <div class="card-body">
@@ -70,7 +70,7 @@
       </div>
     </div><br>
   </div>
-  <div class="col-sm-4 " data-aos="fade-up" >
+  <div class="col-sm-4 " data-aos="fade-up"  data-aos-easing="ease-in-back" data-aos-delay="300">
     <div class="card">
 	<img src="../pic/student1.jpg" class="card-img-top" alt="..." height="200px" width="300px">
       <div class="card-body">
