--- a/project.html
+++ b/project.html
@@ -37,7 +37,7 @@
 </nav>
 
 <!----------------------------------------------------------------------------------------------------------------->
-<div class="col-md-12 row" data-aos="fade-left" data-aos-easing="ease-in-back" data-aos-delay="200">
+<div class="col-md-12 row" data-aos="fade-left" data-aos-easing="ease-in-back" data-aos-duration="1000">
 <div class="col-md-6 text-center">
 <h1 style="font-family:'Comic Sans', cursive;font-size:5rem;padding-top:15%">Projects</h1>
 </div>
@@ -47,10 +47,10 @@
 </div><hr color=#989898>
 <!----------------------------------------------------------------------------------------------------------------->
 <br>
-<h1 class="tab-title" data-aos="flip-left"  data-aos-easing="ease-in-back" data-aos-delay="300">Basic Projects</h1>
+<h1 class="tab-title" data-aos="flip-left"  data-aos-easing="ease-in-back" data-aos-duration="1000">Basic Projects</h1>
 <br>
 <div class="row tab1">
-<div class="col-sm-4 " data-aos="fade-up"  data-aos-easing="ease-in-back" data-aos-delay="300">
+<div class="col-sm-4 " data-aos="fade-up"  data-aos-easing="ease-in-back" data-aos-duration="1000">
     <div class="card">
 	<img src="../pic/student1.jpg" class="card-img-top" alt="..." height="200px" width="300px">
       <div class="card-body">
@@ -60,7 +60,7 @@
       </div>
     </div><br>
   </div>
-  <div class="col-sm-4 " data-aos="fade-up"  data-aos-easing="ease-in-back" data-aos-delay="300">
+  <div class="col-sm-4 " data-aos="fade-up"  data-aos-easing="ease-in-back" data-aos-duration="1000">
     <div class="card">
 	<img src="../pic/student1.jpg" class="card-img-top" alt="..." height="200px" width="300px">
       <div class="card-body">
@@ -70,7 +70,7 @@
       </div>
     </div><br>
   </div>
-  <div class="col-sm-4 " data-aos="fade-up"  data-aos-easing="ease-in-back" data-aos-delay="300">
+  <div class="col-sm-4 " data-aos="fade-up"  data-aos-easing="ease-in-back" data-aos-duration="1000">
     <div class="card">
 	<img src="../pic/student1.jpg" class="card-img-top" alt="..." height="200px" width="300px">
       <div class="card-body">
