--- a/contact.html
+++ b/contact.html
@@ -39,36 +39,36 @@
   </div>
 </nav>
 <!-----------------------------------------title----------------------------------------------------------------------->
-<div class="col-md-12 title1">
-<h1 data-aos="fade-left">Contact</h1>
-<h6 data-aos="fade-left" style="color:#989898">Get In Touch</h6>
+<div class="col-md-12 title1"><br>
+<h1 data-aos="fade-left" data-aos-duration="1000">Contact</h1>
+<h6 data-aos="fade-left" data-aos-duration="1000" style="color:#989898">Get In Touch</h6>
 </div>
 <hr color=#989898>
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d60322.27010273172!2d72.8376285981323!3d19.101430657418554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5667a01805098b5b!2sParle%20Products%20Pvt.%20Ltd!5e0!3m2!1sen!2sin!4v1611126015798!5m2!1sen!2sin" 
 width="90%" height="60%" frameborder="0" style="border:1px solid orange;margin-left:5%;" allowfullscreen="" aria-hidden="false" tabindex="0" 
-data-aos="fade-up" ></iframe>
+data-aos="fade-up" data-aos-duration="1000"></iframe>
 
 <!-----------------------------------------title----------------------------------------------------------------------->
 <br><br><br>
 <div class="text-center" >
   
-    <h1 class="card-title" data-aos="fade-left" >Send Us a Message</h1>
-	<h2 data-aos="fade-left">Ask Query</h2>
-	<h3 style="color:green;" data-aos="fade-left"><b>________</b></h3>
+    <h1 class="card-title" data-aos="fade-left" data-aos-duration="1000">Send Us a Message</h1>
+	<h2 data-aos="fade-left" data-aos-duration="1000">Ask Query</h2>
+	<h3 style="color:green;" data-aos="fade-left" data-aos-duration="1000"><b>________</b></h3>
 	<br>
   </div>
 
     
 <div class="container" style="padding-left:5%;">
-<div class="row col-md-12 " data-aos="fade-up">
+<div class="row col-md-12 " data-aos="fade-up" data-aos-duration="1000">
 <div class="col-md-4"><br>
 <H6 class="box1 inline"><i class='fas fa-mobile-alt' style='font-size:35px;color:#0071f2;width:50px;' ></i></H6>&nbsp;&nbsp;<H6 class="box1 inline">+91 7678-065-764</h6><br><br>
 <H6 class="box1 inline"><i class='far fa-paper-plane' style='font-size:30px;color:#0071f2;width:50px;' ></i></H6>&nbsp;&nbsp;<H6 class="box1 inline">abhisawant52.as@gmail.com</h6><br><br>
 <H6 class="box1 inline"><i class='fas fa-map-marker-alt' style='font-size:40px;color:#0071f2;width:50px;'></i></H6>&nbsp;&nbsp;<H6 class="box1 inline">Mumbai, Maharashtra</h6><br><p style="padding-left:20%;">1/H Parle Products PVT <br>LTD Compound,<br> V.S.khandekar marg, <br>Vile Parle East-400057 </p><br>
 
 </div>
-<div class="col-md-8" data-aos="fade-up" ><h4>How Can I Help You?</h4><br>
+<div class="col-md-8" data-aos="fade-up" data-aos-duration="1000" ><h4>How Can I Help You?</h4><br>
 <div class="progress" style="height:1%;width:50%;margin-top:-5%;">
   <div class="progress-bar" role="progressbar" style="width: 20%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
@@ -93,7 +93,7 @@ data-aos="fade-up" ></iframe>
 </div></div>
 
 <!----------------------------------------------------------------------------------------------------------------->
-<div class="row" data-aos="zoom-in-up"  style="margin:2%;padding-left:5%;border:2px dashed red;background-color:white;"><br><br><br>
+<div class="row" data-aos="zoom-in-up" data-aos-duration="1000" style="margin:2%;padding-left:5%;border:2px dashed red;background-color:white;"><br><br><br>
 <div class="col-md-8"><br>
 <h1>Reach Out to me!</h1>
 <p>WANNA DISCUSS A PROJECT/UP FOR ANY WORK, WANNA SAY HI? MY INBOX IS OPEN FOR ALL.</p>
