--- a/project.html
+++ b/project.html
@@ -37,11 +37,11 @@
 </nav>
 
 <!----------------------------------------------------------------------------------------------------------------->
-<div class="col-md-12 row" data-aos="fade-left" data-aos-easing="ease-in-back" data-aos-duration="1000">
+<div class="col-md-12 row">
 <div class="col-md-6 text-center">
-<h1 style="font-family:'Comic Sans', cursive;font-size:5rem;padding-top:15%">Projects</h1>
+<h1 style="font-family:'Comic Sans', cursive;font-size:5rem;padding-top:15%" data-aos="fade-left" data-aos-easing="ease-in-back" data-aos-duration="1000">Projects</h1>
 </div>
-<div class="col-md-6 text-center">
+<div class="col-md-6 text-center" data-aos="fade-left" data-aos-easing="ease-in-back" data-aos-duration="1000">
 <img src="pic/1_IRGHmiGsa16stedQvIaZfw.gif" class="pic" alt="Paris" width="350" height="220">
 </div><br>
 </div><hr color=#989898>
