--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,7 @@
 	<h4>ABHISHEK SAWANT.</h4>
 	<h6>Contact Number: +91 7678065764<br>
 	Email: abhisawant52.as@gmail.com<br>
-	Portfolio: <a href="https://abhisawant52.github.io/" target="_blank">https://abhi52-as.github.io/abhi.live.github.io/</a>
+	Portfolio: <a href="https://abhisawant52.github.io/" target="_blank">https://abhisawant52.github.io/</a>
 	</h6>
 	</div>
 	</td>
@@ -98,8 +98,24 @@
 	
 	<!-------------------------------------------------------------------------------------------------->
 	<div>
-	<h5>Projects&nbsp;<span>&nbsp;</span></h5> </div><br>
-	
+	<h4>Projects&nbsp;<span>&nbsp;</span></h4> </div><br>
+	<h5><i class='fas fa-angle-double-right' ></i>&nbsp;Chat-Room - Chat Application</h5>
+	<p class="rotated">
+	<a href="http://www.chatroom.unaux.com/" target="_blank" ><i class="fab fa-chrome"></i>&nbsp;http://www.chatroom.unaux.com/</a><br>
+	<a href="https://github.com/Abhisawant52/Chat-Room" target="_blank" ><i class="fab fa-github"></i>&nbsp;https://github.com/Abhisawant52/Chat-Room</a><br>
+	A simple chat application using PHP JavaScript and AJAX.
+	This Chat-Room is responsive, real-time and a dynamic chat system developed using PHP PDO, MySQLi and AJAX.</p>
+	<h5><i class='fas fa-angle-double-right' ></i>&nbsp;Book-Store</h5>
+	<p class="rotated">
+	<a href="https://bit.ly/3coKR7z" target="_blank" ><i class="fab fa-chrome"></i>&nbsp;https://bit.ly/3coKR7z</a><br>
+	<a href="https://github.com/Abhisawant52/Book-Store" target="_blank" ><i class="fab fa-github"></i>&nbsp;https://github.com/Abhisawant52/Book-Store</a><br>
+	This is an E-commerece project for buying books online where admin can add the available books in the database and keep updating the database which will be shown to the user on the website simultaneously.
+	Developed using PHP Bootstrap & Mysql Database with PAYTM payment Gateway.</p>
+	<h5><i class='fas fa-angle-double-right' ></i>&nbsp;Rock Paper Scissors Game in JavaScript.</h5>
+	<p class="rotated">
+	<a href="https://abhisawant52.github.io/Rock-Paper-Scissors-Game/" target="_blank" ><i class="fab fa-chrome"></i>&nbsp;https://abhisawant52.github.io/Rock-Paper-Scissors-Game/</a><br>
+	<a href="https://github.com/Abhisawant52/Rock-Paper-Scissors-Game" target="_blank" ><i class="fab fa-github"></i>&nbsp;https://github.com/Abhisawant52/Rock-Paper-Scissors-Game</a><br>
+	User just needs to press Rock, Paper, and Scissors button. Computer also generates their choice while the user presses the button. Every time when the user presses the button, one function call made to check the condition for winning. According to the condition, the score counter will increase. This game is infinite.<br>
 	<!-------------------------------------------------------------------------------------------------->
 	<div>
 	<h5>Certification&nbsp;<span>&nbsp;</span></h5>
@@ -132,3 +148,4 @@
     </section>
   </body>
 </html>
+
