--- a/resume.html
+++ b/resume.html
@@ -104,7 +104,7 @@
 	<a href="http://www.chatroom.unaux.com/" target="_blank" ><i class="fab fa-chrome"></i>&nbsp;http://www.chatroom.unaux.com/</a><br>
 	<a href="https://github.com/Abhisawant52/Chat-Room" target="_blank" ><i class="fab fa-github"></i>&nbsp;https://github.com/Abhisawant52/Chat-Room</a><br>
 	A simple chat application using PHP JavaScript and AJAX.
-	This Chat-Room is responsive, real-time and a dynamic chat system developed using PHP PDO, MySQLi and AJAX.</p>
+	This Chat-Room is responsive, real-time and a dynamic chat system developed using PHP PDO, MySQLi and AJAX.</p><br><br>
 	<h5><i class='fas fa-angle-double-right' ></i>&nbsp;Book-Store</h5>
 	<p class="rotated">
 	<a href="https://bit.ly/3coKR7z" target="_blank" ><i class="fab fa-chrome"></i>&nbsp;https://bit.ly/3coKR7z</a><br>
