--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@
 	</td>
 	<td>
 	<div style="text-align:right">
-	<a href="https://github.com/abhisawant52" target="_blank" >Abhi52-as&nbsp;<i class="fab fa-github"></i></a><br>
+	<a href="https://github.com/abhisawant52" target="_blank" >abhisawant52&nbsp;<i class="fab fa-github"></i></a><br>
 	<a href="https://www.linkedin.com/in/abhishek-sawant-7986941b1" target="_blank" >Abhishek sawant&nbsp;<i class="fab fa-linkedin-in"></i></a><br>
 	<a href="https://www.facebook.com/profile.php?id=100006130181720" target="_blank" >Abhishek sawant&nbsp;<i class="fab fa-facebook-f"></i></a><br>
 	<a href="https://www.instagram.com/ig_abhisawant/"" target="_blank" >ig_abhisawant&nbsp;<i class="fab fa-instagram"></i></a><br>
