--- a/resume.html
+++ b/resume.html
@@ -53,10 +53,10 @@
 	</td>
 	<td>
 	<div style="text-align:right">
-	<a href="https://github.com/abhisawant52" target="_blank" >abhisawant52&nbsp;<i class="fab fa-github"></i></a><br>
+	<a href="https://github.com/abhisawant52" target="_blank" >Abhi52-as&nbsp;<i class="fab fa-github"></i></a><br>
 	<a href="https://www.linkedin.com/in/abhishek-sawant-7986941b1" target="_blank" >Abhishek sawant&nbsp;<i class="fab fa-linkedin-in"></i></a><br>
 	<a href="https://www.facebook.com/profile.php?id=100006130181720" target="_blank" >Abhishek sawant&nbsp;<i class="fab fa-facebook-f"></i></a><br>
-	<a href="https://www.instagram.com/ig_abhisawant/"" target="_blank" >ig_abhisawant&nbsp;<i class="fab fa-instagram"></i></a><br>
+	<a href="https://www.instagram.com/abhi_sawant52" target="_blank" >abhi_sawant52&nbsp;<i class="fab fa-instagram"></i></a><br>
 	
 	</td></tr>
 	</table>
@@ -66,18 +66,20 @@
 	<!-------------------------------------------------------------------------------------------------->
 	
 	<h5 class="inline">Skills:</h5>&nbsp;&nbsp;
-	<h6 class="inline circle">React&nbsp;</h6>&nbsp;
+	<!-- <h6 class="inline circle">React&nbsp;</h6>&nbsp; -->
 	<h6 class="inline circle">HTML&nbsp;</h6>&nbsp;
 	<h6 class="inline circle">CSS&nbsp;</h6>&nbsp;
 	<h6 class="inline circle">JavaScript&nbsp;</h6>&nbsp;
 	<h6 class="inline circle">MySql&nbsp;</h6>&nbsp;
-	<h6 class="inline circle">MongoDB&nbsp;</h6>
+	<h6 class="inline circle">MongoDB&nbsp;</h6> 
 	<h6 class="inline circle">PHP</h6>&nbsp;
-	<h6 class="inline circle">Python&nbsp;</h6>&nbsp;<br>
+	<h6 class="inline circle">JQuery</h6>&nbsp;
+	<h6 class="inline circle">React</h6>&nbsp;
+	<h6 class="inline circle">Nuxt</h6>&nbsp;&nbsp;<br>
 	<br>
 	<!-------------------------------------------------------------------------------------------------->
 	<div>
-	<h5>Education&nbsp;<span>&nbsp;</span></h5> 
+	<h4>Education&nbsp;<span>&nbsp;</span></h4> 
 	<div>
 	<h6><i class='fas fa-angle-double-right' ></i>&nbsp;Master of Science in Information Technology. </h6>
 	<p class="rotated">University of Mumbai<br>
@@ -95,19 +97,18 @@
 	</div>
 	</div><br>
 	
-	
 	<!-------------------------------------------------------------------------------------------------->
 	<div>
 	<h4>Projects&nbsp;<span>&nbsp;</span></h4> </div><br>
 	<h5><i class='fas fa-angle-double-right' ></i>&nbsp;Chat-Room - Chat Application</h5>
 	<p class="rotated">
-	<a href="http://www.chatroom.unaux.com/" target="_blank" ><i class="fab fa-chrome"></i>&nbsp;http://www.chatroom.unaux.com/</a><br>
+	<!--<a href="http://www.chatroom.unaux.com/" target="_blank" ><i class="fab fa-chrome"></i>&nbsp;http://www.chatroom.unaux.com/</a><br>-->
 	<a href="https://github.com/Abhisawant52/Chat-Room" target="_blank" ><i class="fab fa-github"></i>&nbsp;https://github.com/Abhisawant52/Chat-Room</a><br>
 	A simple chat application using PHP JavaScript and AJAX.
 	This Chat-Room is responsive, real-time and a dynamic chat system developed using PHP PDO, MySQLi and AJAX.</p>
 	<h5><i class='fas fa-angle-double-right' ></i>&nbsp;Book-Store</h5>
 	<p class="rotated">
-	<a href="https://bit.ly/3coKR7z" target="_blank" ><i class="fab fa-chrome"></i>&nbsp;https://bit.ly/3coKR7z</a><br>
+	<!--<a href="https://bit.ly/3coKR7z" target="_blank" ><i class="fab fa-chrome"></i>&nbsp;https://bit.ly/3coKR7z</a><br>-->
 	<a href="https://github.com/Abhisawant52/Book-Store" target="_blank" ><i class="fab fa-github"></i>&nbsp;https://github.com/Abhisawant52/Book-Store</a><br>
 	This is an E-commerece project for buying books online where admin can add the available books in the database and keep updating the database which will be shown to the user on the website simultaneously.
 	Developed using PHP Bootstrap & Mysql Database with PAYTM payment Gateway.</p>
@@ -116,6 +117,16 @@
 	<a href="https://abhisawant52.github.io/Rock-Paper-Scissors-Game/" target="_blank" ><i class="fab fa-chrome"></i>&nbsp;https://abhisawant52.github.io/Rock-Paper-Scissors-Game/</a><br>
 	<a href="https://github.com/Abhisawant52/Rock-Paper-Scissors-Game" target="_blank" ><i class="fab fa-github"></i>&nbsp;https://github.com/Abhisawant52/Rock-Paper-Scissors-Game</a><br>
 	User just needs to press Rock, Paper, and Scissors button. Computer also generates their choice while the user presses the button. Every time when the user presses the button, one function call made to check the condition for winning. According to the condition, the score counter will increase. This game is infinite.<br>
+	<!-------------------------------------------------------------------------------------------------->
+	<div>
+	<h4>Work Experiance&nbsp;<span>&nbsp;</span></h4> <br>
+	<div>
+	<h5><i class='fas fa-angle-double-right' ></i>&nbsp;Assistant Developer</h5>
+	<p class="rotated">
+	Ocufox Technology Pvt Ltd (Internship)<br>
+	
+	Jun 2021 - Oct 2021</p>
+	</div></div>
 	<!-------------------------------------------------------------------------------------------------->
 	<div>
 	<h5>Certification&nbsp;<span>&nbsp;</span></h5>
@@ -148,4 +159,3 @@
     </section>
   </body>
 </html>
-
